--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
             <h2 class="section-title">A propos de moi</h2>
 
             <div class="col-xs-12">
-                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour <a href="http://www.novastonemedia.com/">Novastone Media</a>.</p>
+                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant qu'ingénieur web front-end pour <a href="https://www.qumu.com/">Qumu</a>.</p>
 
                 <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.</p>
 
