--- a/404.html
+++ b/404.html
@@ -1,152 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>PB | Ingénieur web & mobile</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Pierre Baron">
-    <meta name="keyword"
-          content="Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery">
-
-    <link rel="shortcut icon" href="/img/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
-
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-
-<header>
-    <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">
-                    <img src="/img/logo.png" alt="logo"/> pierrebaron
-                </a>
-            </div>
-            <div class="navbar-collapse collapse navbar-right">
-                <ul class="nav navbar-nav">
-
-
-                    <li class="active"><a href="/">HOME</a></li>
-
-
-                    <li class=""><a href="/blog/">BLOG</a></li>
-
-
-                    <li class=""><a href="/contact/">CONTACT</a></li>
-
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-        <!-- .container -->
-    </div>
-    <!-- .navbar -->
-
-    <div class="tagline tagline-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="tagline-title">404</div>
-                </div>
-            </div>
-            <!-- .row -->
-        </div>
-        <!-- .container -->
-    </div>
-    <!-- .tagline -->
-</header>
-
+---
+layout: default
+tagline: Oups :$
+---
 
 <section class="section">
-    <div class="container">
-        <div class="row">
-            <h2 class="section-title">Oups :$</h2>
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title">404</h2>
 
-            <div class="col-xs-12">
-                <p>Il semblerait que la page que vous recherchiez n'existe pas.</p>
-            </div>
-        </div>
+      <div class="col-xs-12">
+        <p>Il semblerait que la page que vous recherchiez n'existe pas.</p>
+      </div>
     </div>
+  </div>
 </section>
-
-<footer class="footer footer-inverse">
-    <section class="footer-information">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h4 class="title-underline title-default">A propos</h4>
-
-                    <p>Pierre Baron est ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
-                </div>
-                <div class="col-md-4">
-                    <h4 class="title-underline title-default">Socialisons nous</h4>
-
-                    <p>
-                        <a href="mailto:prbaron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
-                        <a href="skype:prbaron"><i class="fa fa-skype"></i></a>
-                        <a href="https://twitter.com/prbaron"><i class="fa fa-twitter"></i></a>
-                        <a href="https://github.com/prbaron"><i class="fa fa-github-alt"></i></a>
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h4 class="title-underline title-default">Menu</h4>
-
-                    <p>
-
-                        <a href="/">HOME</a>
-
-                        <a href="/blog/">BLOG</a>
-
-                        <a href="/contact/">CONTACT</a>
-
-                    </p>
-                </div>
-            </div>
-            <!--.row -->
-        </div>
-        <!--.container -->
-    </section>
-    <section class="footer-copyright">
-        <div class="container ">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <p>2012 - 2014 &copy; Pierre Baron</p>
-                </div>
-            </div>
-            <!--.row -->
-        </div>
-        <!--.container -->
-    </section>
-</footer>
-<!-- .footer -->
-
-
-<script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-21369110-4']);
-    _gaq.push(['_setDomainName', '']); // Multiple sub-domains
-    _gaq.push(['_setAllowLinker', true]); // Multiple TLDs
-    _gaq.push(['_trackPageview']);
-    (function () {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-    })();
-</script>
-
-
-<script src="/js/vendor.all.js"></script>
-<script src="/js/app.js"></script>
-</body>
-</html>
