--- a/index.html
+++ b/index.html
@@ -6,146 +6,149 @@ menu     : Home
 keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
-<img src="/img/avatar.png" alt="" class="img-avatar"/>
+<img src="/img/avatar.png" alt="Avatar" class="img-avatar"/>
 
 <section class="section section-resume">
-    <div class="container">
-        <div class="row">
-            <h2 class="section-title">A propos de moi</h2>
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title">A propos de moi</h2>
 
-            <div class="col-xs-12">
-                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant qu'ingénieur web front-end pour <a href="https://www.qumu.com/">Qumu</a>.</p>
+      <div class="col-xs-12">
+        <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je
+          travaille actuellement en tant qu'ingénieur web front-end pour <a href="https://www.qumu.com/">Qumu</a>.</p>
 
-                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.</p>
+        <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur
+          spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à
+          l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant
+          de la programmation objet, l'automatisme, les réseaux ou la sécurité.</p>
 
-                <p class="text-center resume">
-                    <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary btn-block-xs">Télécharger mon CV</a>
-                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-block-xs">Download my resume</a>
-                </p>
-            </div>
-        </div>
+        <p class="text-center resume">
+          <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary btn-block-xs">Télécharger mon CV</a>
+          <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-block-xs">Download my resume</a>
+        </p>
+      </div>
     </div>
+  </div>
 </section>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
-     viewBox="0 0 100 102" preserveAspectRatio="none">
-    <path d="M0 0 L50 100 L100 0 Z"></path>
+    viewBox="0 0 100 102" preserveAspectRatio="none">
+  <path d="M0 0 L50 100 L100 0 Z"></path>
 </svg>
 <section class="section section-skills text-center">
-    <div class="container">
-        <div class="row">
-            <h2 class="section-title">Compétences</h2>
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title">Compétences</h2>
 
-            <div class="col-md-6 skill">
-                <i class="fa fa-gears skill-icon"></i>
-                <h4 class="skill-title">Développement back end</h4>
+      <div class="col-md-6 skill">
+        <i class="fa fa-gears skill-icon"></i>
+        <h4 class="skill-title">Développement back end</h4>
 
-                <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui
-                    permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
+        <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui
+          permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
 
-                <p class="skill-list">
-                    <strong>Outils maîtrisés : </strong>
-                    Java, PHP, MongoDB, MySQL.
-                </p>
-            </div>
-            <div class="col-md-6 skill">
-                <i class="fa fa-desktop skill-icon"></i>
-                <h4 class="skill-title">Développement front end</h4>
+        <p class="skill-list">
+          <strong>Outils maîtrisés : </strong>
+          Java, PHP, MongoDB, MySQL.
+        </p>
+      </div>
+      <div class="col-md-6 skill">
+        <i class="fa fa-desktop skill-icon"></i>
+        <h4 class="skill-title">Développement front end</h4>
 
-                <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique.
-                    L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de
-                    juger et d'apprécier votre application.</p>
+        <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique.
+          L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de
+          juger et d'apprécier votre application.</p>
 
-                <p class="skill-list">
-                    <strong>Outils maîtrisés : </strong>
-                    HTML5, CSS3, Sass, Less, JavaScript.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 skill">
-                <i class="fa fa-mobile skill-icon"></i>
-                <h4 class="skill-title">Développement mobile</h4>
-
-                <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi
-                    nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand
-                    nombre d'appareils.</p>
-
-                <p class="skill-list">
-                    <strong>Outils maîtrisés : </strong>
-                    HTML5, CSS3, Objective-C, Android.
-                </p>
-            </div>
-            <div class="col-md-6 skill">
-                <i class="fa fa-dashboard skill-icon"></i>
-                <h4 class="skill-title">Gestion de projet</h4>
-
-                <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un
-                    bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches
-                    tout au long du projet et de pouvoir le suivre du début à la fin.</p>
-
-                <p class="skill-list">
-                    <strong>Outils maîtrisés : </strong>
-                    Git, Mercurial, SCRUM, Kanban, Gantt, pair coding.
-                </p>
-            </div>
-
-        </div>
+        <p class="skill-list">
+          <strong>Outils maîtrisés : </strong>
+          HTML5, CSS3, Sass, Less, JavaScript.
+        </p>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-md-6 skill">
+        <i class="fa fa-mobile skill-icon"></i>
+        <h4 class="skill-title">Développement mobile</h4>
+
+        <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi
+          nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand
+          nombre d'appareils.</p>
+
+        <p class="skill-list">
+          <strong>Outils maîtrisés : </strong>
+          HTML5, CSS3, Objective-C, Android.
+        </p>
+      </div>
+      <div class="col-md-6 skill">
+        <i class="fa fa-dashboard skill-icon"></i>
+        <h4 class="skill-title">Gestion de projet</h4>
+
+        <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un
+          bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches
+          tout au long du projet et de pouvoir le suivre du début à la fin.</p>
+
+        <p class="skill-list">
+          <strong>Outils maîtrisés : </strong>
+          Git, Mercurial, SCRUM, Kanban, Gantt, pair coding.
+        </p>
+      </div>
+
+    </div>
+  </div>
 </section>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
-     viewBox="0 0 100 102" preserveAspectRatio="none">
-    <path d="M0 0 L50 100 L100 0 Z"></path>
+    viewBox="0 0 100 102" preserveAspectRatio="none">
+  <path d="M0 0 L50 100 L100 0 Z"></path>
 </svg>
 <section class="section">
-    <div class="container">
-        <h2 class="section-title">Projets</h2>
-        {% assign w = site.works | sort:'order' %}
-        {% for work in w reversed %}
-        <div class="row work">
-            <div class="col-sm-8">
-                <div class="work-heading">
-                    <h4 class="work-title title-underline title-inverse">{{work.tagline}}</h4>
-                </div>
-                <div class="work-body">
-                    {{ work.output }}
-                </div>
-            </div>
-            <div class="col-sm-4 work-detail">
-                <h4 class="title-underline title-inverse">Détails du projet</h4>
-
-                <p>
-                    <strong>Clients : </strong>
-                    {% if work.client%}{{ work.client}} {% else %} Pierre Baron {% endif %}
-                </p>
-
-                {% if work.daterange %}
-                <p>
-                    <strong>Date : </strong>
-                    {{ work.daterange }}
-                </p>
-                {% endif %}
-
-                {% if work.duration %}
-                <p>
-                    <strong>Durée : </strong>
-                    {{ work.duration }}
-                </p>
-                {% endif %}
-
-                <p>
-                    <strong>Compétences : </strong>
-                    {{ work.skills }}
-                </p>
-
-                {% if work.demo %}
-                <p><a href="{{work.demo}}" class="btn btn-primary btn-block-xs">Voir les exemples</a></p>
-                {% endif %}
-                {% if work.github %}
-                <p><a href="{{work.github}}" class="btn btn-default btn-block-xs">Forker le projet</a></p>
-                {% endif %}
-            </div>
+  <div class="container">
+    <h2 class="section-title">Projets</h2>
+    {% assign w = site.works | sort:'order' %}
+    {% for work in w reversed %}
+    <div class="row work">
+      <div class="col-sm-8">
+        <div class="work-heading">
+          <h4 class="work-title title-underline title-inverse">{{work.tagline}}</h4>
         </div>
+        <div class="work-body">
+          {{ work.output }}
+        </div>
+      </div>
+      <div class="col-sm-4 work-detail">
+        <h4 class="title-underline title-inverse">Détails du projet</h4>
 
-        {% endfor %}
+        <p>
+          <strong>Clients : </strong>
+          {% if work.client%}{{ work.client}} {% else %} Pierre Baron {% endif %}
+        </p>
+
+        {% if work.daterange %}
+        <p>
+          <strong>Date : </strong>
+          {{ work.daterange }}
+        </p>
+        {% endif %}
+
+        {% if work.duration %}
+        <p>
+          <strong>Durée : </strong>
+          {{ work.duration }}
+        </p>
+        {% endif %}
+
+        <p>
+          <strong>Compétences : </strong>
+          {{ work.skills }}
+        </p>
+
+        {% if work.demo %}
+        <p><a href="{{work.demo}}" class="btn btn-primary btn-block-xs">Voir les exemples</a></p>
+        {% endif %}
+        {% if work.github %}
+        <p><a href="{{work.github}}" class="btn btn-default btn-block-xs">Forker le projet</a></p>
+        {% endif %}
+      </div>
     </div>
+    {% endfor %}
+  </div>
 </section>
