Reduced CSS size

--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
 
       <div class="form-group">
         <label for="" class="control-label">Message</label>
-        <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3"
+        <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3" rows="7"
             required></textarea>
       </div>
       <!-- .form-group -->
