--- a/contact/index.html
+++ b/contact/index.html
@@ -5,43 +5,30 @@ tagline  : Contact
 menu     : Contact
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
+
 <div class="row">
   <div class="col-lg-6 col-md-8">
     <h4>Restons en contact !</h4>
 
     <div class="hline"></div>
-    <form id="form1" name="form1" class="wufoo" autocomplete="off" enctype="multipart/form-data" method="post"
-        action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
+    <form name="contact" netlify>
       <div class="form-group">
-        <label for="" class="control-label">Nom</label>
-        <input id="Field18" name="Field18" type="text" class="form-control" value="" maxlength="255"
-            tabindex="1" required/>
+        <label for="name" class="control-label">Nom</label>
+        <input id="name" name="name" type="text" class="form-control" required/>
       </div>
-      <!-- .form-group -->
 
       <div class="form-group">
-        <label for="" class="control-label">Email</label>
-        <input id="Field17" name="Field17" type="email" spellcheck="false" class="form-control" value=""
-            maxlength="255" tabindex="2" required/>
+        <label for="email" class="control-label">Email</label>
+        <input id="email" name="email" type="email" class="form-control" required/>
       </div>
-      <!-- .form-group -->
 
       <div class="form-group">
-        <label for="" class="control-label">Message</label>
-        <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3" rows="7"
-            required></textarea>
+        <label for="message" class="control-label">Message</label>
+        <textarea id="message" name="message" class="form-control" spellcheck="true"  rows="7" required></textarea>
       </div>
-      <!-- .form-group -->
 
       <div class="form-group">
         <input id="saveForm" name="saveForm" class="submit btn btn-primary" type="submit" value="Envoyer"/>
-      </div>
-      <!-- .form-group -->
-
-      <div class="hidden">
-        <label for="comment">Do Not Fill This Out</label>
-        <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
-        <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA="/>
       </div>
     </form>
   </div>
